github/workflows: Try to use ubuntu-20.04 for NetBSD CI with docker

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,7 +200,7 @@ jobs:
 
   build-netbsd-docker:
     name: "build (NetBSD/amd64 9.3 with pkgsrc on docker)"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v3
