src: Generate ibusenumtypes.h for gen-internal-compose-table
`make clean` deletes ibusenumtypes.h and ibus.h incudes ibusenumtypes.h
and it's required by the gen-internal-compose-table build.

BUG=https://github.com/ibus/ibus/issues/2501

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -194,6 +194,7 @@ gen_internal_compose_table_SOURCES = \
     ibuserror.c         \
     ibuskeynames.c      \
     ibuskeyuni.c        \
+    ibusenumtypes.h     \
     $(NULL)
 gen_internal_compose_table_CFLAGS = $(AM_CFLAGS)
 gen_internal_compose_table_LDADD = \
