po: Update POT file

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -54,6 +54,7 @@ src/ibusservice.c
 src/ibusunicodegen.h
 src/ibusutil.c
 src/keyname-table.h
+tools/ibusimmodule.c
 tools/main.vala
 ui/gtk3/application.vala
 ui/gtk3/candidatearea.vala
