configure: Fix cross compiling
Use AX_PROG_CC_FOR_BUILD to get build CC/CFLAGS/LDFLAGS/etc.
Use PKG_PROG_PKG_CONFIG_FOR_BUILD to find build pkg-config binary.

https://sourceware.org/autobook/autobook/autobook_143.html#Supporting-Cross-Compiler-in-Make

BUG=https://github.com/ibus/ibus/issues/2479

--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -21,7 +21,9 @@
 # USA
 
 EXTRA_DIST = \
+    ax_prog_cc_for_build.m4 \
     ibuslocale.m4 \
+    pkg_config_for_build.m4 \
     vapigen.m4 \
     $(NULL)
 
