--- a/src/tests/ibus-compose.env
+++ b/src/tests/ibus-compose.env
@@ -1,4 +1,5 @@
 LANG=el_GR.UTF-8
 LANG=fi_FI.UTF-8
 LANG=pt_BR.UTF-8
+LANG=en_US.UTF-8 COMPOSE_FILE=ibus-compose.basic
 LANG=en_US.UTF-8 COMPOSE_FILE=ibus-compose.emoji
